# orly-bookstore-bot

./: README.md  orly-bookstore-bot.cabal  stack.yaml
src/: Lib.hs
test/: Spec.hs
