name:                orly-bookstore-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/orly-bookstore-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Paths_orly_bookstore_bot
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , mtl
                     , http-client
                     , http-client-tls
                     , telegram-api
                     , text
                     , transformers
  default-language:    Haskell2010

executable orly-bookstore-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orly-bookstore-bot
  default-language:    Haskell2010

test-suite orly-bookstore-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , orly-bookstore-bot
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/orly-bookstore-bot
